python/rregadmin/cli/basic_result_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^RRACliResult.* -r ^rra_cli_result_.* -o basic_result_wrapper.py basic_result_wrapper.xml'
from ctypes import *

_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
STRING = c_char_p
from rregadmin.util.value_wrapper import GByteArray
from rregadmin.hive.types_wrapper import Cell


# ../../../rregadmin/cli/basic_result.h 43
class RRACliResult_(Structure):
    pass
RRACliResult = RRACliResult_
RRACliResult_._fields_ = [
    # ../../../rregadmin/cli/basic_result.h 43
]
# ../../../rregadmin/cli/basic_result.h 49
rra_cli_result_new = _libraries['librregadmin.so.1'].rra_cli_result_new
rra_cli_result_new.restype = POINTER(RRACliResult)
# rra_cli_result_new()
rra_cli_result_new.argtypes = []
rra_cli_result_new.__doc__ = \
"""RRACliResult * rra_cli_result_new()
../../../rregadmin/cli/basic_result.h:49"""
# ../../../rregadmin/cli/basic_result.h 55
rra_cli_result_free = _libraries['librregadmin.so.1'].rra_cli_result_free
rra_cli_result_free.restype = gboolean
# rra_cli_result_free(in_res)
rra_cli_result_free.argtypes = [POINTER(RRACliResult)]
rra_cli_result_free.__doc__ = \
"""gboolean rra_cli_result_free(RRACliResult * in_res)
../../../rregadmin/cli/basic_result.h:55"""
# ../../../rregadmin/cli/basic_result.h 61
rra_cli_result_set_error = _libraries['librregadmin.so.1'].rra_cli_result_set_error
rra_cli_result_set_error.restype = gboolean
# rra_cli_result_set_error(in_res)
rra_cli_result_set_error.argtypes = [POINTER(RRACliResult)]
rra_cli_result_set_error.__doc__ = \
"""gboolean rra_cli_result_set_error(RRACliResult * in_res)
../../../rregadmin/cli/basic_result.h:61"""
# ../../../rregadmin/cli/basic_result.h 67
rra_cli_result_set_success = _libraries['librregadmin.so.1'].rra_cli_result_set_success
rra_cli_result_set_success.restype = gboolean
# rra_cli_result_set_success(in_res)
rra_cli_result_set_success.argtypes = [POINTER(RRACliResult)]
rra_cli_result_set_success.__doc__ = \
"""gboolean rra_cli_result_set_success(RRACliResult * in_res)
../../../rregadmin/cli/basic_result.h:67"""
# ../../../rregadmin/cli/basic_result.h 73
rra_cli_result_set_exit = _libraries['librregadmin.so.1'].rra_cli_result_set_exit
rra_cli_result_set_exit.restype = gboolean
# rra_cli_result_set_exit(in_res)
rra_cli_result_set_exit.argtypes = [POINTER(RRACliResult)]
rra_cli_result_set_exit.__doc__ = \
"""gboolean rra_cli_result_set_exit(RRACliResult * in_res)
../../../rregadmin/cli/basic_result.h:73"""
# ../../../rregadmin/cli/basic_result.h 81
rra_cli_result_is_error = _libraries['librregadmin.so.1'].rra_cli_result_is_error
rra_cli_result_is_error.restype = gboolean
# rra_cli_result_is_error(in_res)
rra_cli_result_is_error.argtypes = [POINTER(RRACliResult)]
rra_cli_result_is_error.__doc__ = \
"""gboolean rra_cli_result_is_error(unknown * in_res)
../../../rregadmin/cli/basic_result.h:81"""
# ../../../rregadmin/cli/basic_result.h 89
rra_cli_result_is_success = _libraries['librregadmin.so.1'].rra_cli_result_is_success
rra_cli_result_is_success.restype = gboolean
# rra_cli_result_is_success(in_res)
rra_cli_result_is_success.argtypes = [POINTER(RRACliResult)]
rra_cli_result_is_success.__doc__ = \
"""gboolean rra_cli_result_is_success(unknown * in_res)
../../../rregadmin/cli/basic_result.h:89"""
# ../../../rregadmin/cli/basic_result.h 97
rra_cli_result_is_exit = _libraries['librregadmin.so.1'].rra_cli_result_is_exit
rra_cli_result_is_exit.restype = gboolean
# rra_cli_result_is_exit(in_res)
rra_cli_result_is_exit.argtypes = [POINTER(RRACliResult)]
rra_cli_result_is_exit.__doc__ = \
"""gboolean rra_cli_result_is_exit(unknown * in_res)
../../../rregadmin/cli/basic_result.h:97"""
# ../../../rregadmin/cli/basic_result.h 103
rra_cli_result_has_content = _libraries['librregadmin.so.1'].rra_cli_result_has_content
rra_cli_result_has_content.restype = gboolean
# rra_cli_result_has_content(in_res)
rra_cli_result_has_content.argtypes = [POINTER(RRACliResult)]
rra_cli_result_has_content.__doc__ = \
"""gboolean rra_cli_result_has_content(unknown * in_res)
../../../rregadmin/cli/basic_result.h:103"""
# ../../../rregadmin/cli/basic_result.h 109
rra_cli_result_has_data = _libraries['librregadmin.so.1'].rra_cli_result_has_data
rra_cli_result_has_data.restype = gboolean
# rra_cli_result_has_data(in_res)
rra_cli_result_has_data.argtypes = [POINTER(RRACliResult)]
rra_cli_result_has_data.__doc__ = \
"""gboolean rra_cli_result_has_data(unknown * in_res)
../../../rregadmin/cli/basic_result.h:109"""
# ../../../rregadmin/cli/basic_result.h 117
rra_cli_result_add_error = _libraries['librregadmin.so.1'].rra_cli_result_add_error
rra_cli_result_add_error.restype = gboolean
# rra_cli_result_add_error(in_res, in_message)
rra_cli_result_add_error.argtypes = [POINTER(RRACliResult), STRING]
rra_cli_result_add_error.__doc__ = \
"""gboolean rra_cli_result_add_error(RRACliResult * in_res, unknown * in_message)
../../../rregadmin/cli/basic_result.h:117"""
# ../../../rregadmin/cli/basic_result.h 124
rra_cli_result_add_message = _libraries['librregadmin.so.1'].rra_cli_result_add_message
rra_cli_result_add_message.restype = gboolean
# rra_cli_result_add_message(in_res, in_message)
rra_cli_result_add_message.argtypes = [POINTER(RRACliResult), STRING]
rra_cli_result_add_message.__doc__ = \
"""gboolean rra_cli_result_add_message(RRACliResult * in_res, unknown * in_message)
../../../rregadmin/cli/basic_result.h:124"""
# ../../../rregadmin/cli/basic_result.h 134
rra_cli_result_set_data = _libraries['librregadmin.so.1'].rra_cli_result_set_data
rra_cli_result_set_data.restype = gboolean
# rra_cli_result_set_data(in_res, in_data)
rra_cli_result_set_data.argtypes = [POINTER(RRACliResult), POINTER(GByteArray)]
rra_cli_result_set_data.__doc__ = \
"""gboolean rra_cli_result_set_data(RRACliResult * in_res, GByteArray * in_data)
../../../rregadmin/cli/basic_result.h:134"""
# ../../../rregadmin/cli/basic_result.h 140
rra_cli_result_set_cell = _libraries['librregadmin.so.1'].rra_cli_result_set_cell
rra_cli_result_set_cell.restype = gboolean
# rra_cli_result_set_cell(in_res, in_cell)
rra_cli_result_set_cell.argtypes = [POINTER(RRACliResult), POINTER(Cell)]
rra_cli_result_set_cell.__doc__ = \
"""gboolean rra_cli_result_set_cell(RRACliResult * in_res, Cell * in_cell)
../../../rregadmin/cli/basic_result.h:140"""
# ../../../rregadmin/cli/basic_result.h 146
rra_cli_result_get_content = _libraries['librregadmin.so.1'].rra_cli_result_get_content
rra_cli_result_get_content.restype = STRING
# rra_cli_result_get_content(in_res)
rra_cli_result_get_content.argtypes = [POINTER(RRACliResult)]
rra_cli_result_get_content.__doc__ = \
"""unknown * rra_cli_result_get_content(unknown * in_res)
../../../rregadmin/cli/basic_result.h:146"""
# ../../../rregadmin/cli/basic_result.h 152
rra_cli_result_get_data = _libraries['librregadmin.so.1'].rra_cli_result_get_data
rra_cli_result_get_data.restype = POINTER(GByteArray)
# rra_cli_result_get_data(in_res)
rra_cli_result_get_data.argtypes = [POINTER(RRACliResult)]
rra_cli_result_get_data.__doc__ = \
"""unknown * rra_cli_result_get_data(unknown * in_res)
../../../rregadmin/cli/basic_result.h:152"""
# ../../../rregadmin/cli/basic_result.h 158
rra_cli_result_get_cell = _libraries['librregadmin.so.1'].rra_cli_result_get_cell
rra_cli_result_get_cell.restype = POINTER(Cell)
# rra_cli_result_get_cell(in_res)
rra_cli_result_get_cell.argtypes = [POINTER(RRACliResult)]
rra_cli_result_get_cell.__doc__ = \
"""Cell * rra_cli_result_get_cell(unknown * in_res)
../../../rregadmin/cli/basic_result.h:158"""
__all__ = ['RRACliResult_', 'rra_cli_result_add_error',
           'rra_cli_result_set_cell', 'rra_cli_result_add_message',
           'rra_cli_result_is_error', 'rra_cli_result_is_exit',
           'rra_cli_result_set_data', 'RRACliResult',
           'rra_cli_result_has_content', 'rra_cli_result_get_data',
           'rra_cli_result_get_cell', 'rra_cli_result_is_success',
           'rra_cli_result_set_error', 'rra_cli_result_has_data',
           'rra_cli_result_free', 'rra_cli_result_set_exit',
           'rra_cli_result_new', 'rra_cli_result_set_success',
           'rra_cli_result_get_content']
